--- a/css/profile-page.css
+++ b/css/profile-page.css
@@ -98,7 +98,9 @@
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
 	border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
-
+#post-body-content{
+	margin-bottom: 0; 
+}
 #post-body-content  select {
     font-size: 12px;
     height: 21px;
